tests/error/error.gw
// [contains] right-side operand is non-mutable
Gain a @=> dac;
